--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- META TAGS -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="title" content="HydroTech" />
+    <meta name="title" content="SafeFlow" />
     <meta name="description" content="Aplicación de deteccion y alerta para el transporte seguro de productos peligrosos" />
     <meta name="keywords" content="Transporte de materiales peligrosos,Productos altamente peligrosos,Peru" />
     <meta name="robots" content="index, follow" />
