feat: boton call to action

--- a/index.html
+++ b/index.html
@@ -104,13 +104,15 @@
       <div class="content justify-content-center text-center">
         <h1 class="text-white">
           Bienvenido a
-          <span class="fw-bold level-2-title"> SafeFlow: </span> Tu Guia par el 
+          <span class="fw-bold level-2-title"> SafeFlow: </span> Tu Guia para el 
           transporte de productos peligrosos
         </h1>
         <p class="paragraph text-white lead">
-          Transporta productos peligrosos y dejanos toda la seguridad en nuestras manos
+          Transporta productos peligrosos y déjanos toda la seguridad en nuestras manos
         </p>
-        <button class="btn btn-light">Saber más</button>
+        <a href="https://safeflow-v1.netlify.app/services" class="btn btn-light">
+          Saber más
+        </a>
       </div>
     </div>
 
