--- a/indexEN.html
+++ b/indexEN.html
@@ -110,7 +110,9 @@
         <p class="paragraph text-white lead">
           Transport dangerous products and leave all the safety in our hands
         </p>
-        <button class="btn btn-light">Learn more</button>
+        <a href="https://safeflow-v1.netlify.app/services" class="btn btn-light">
+          Learn more
+        </a>
       </div>
     </div>
 
