fix/ call to action

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <p class="paragraph text-white lead">
           Transporta productos peligrosos y déjanos toda la seguridad en nuestras manos
         </p>
-        <a href="https://safeflow-v1.netlify.app/services" class="btn btn-light">
+        <a href="https://safeflow-v1.netlify.app" class="btn btn-light">
           Saber más
         </a>
       </div>
